# eps-copilot-instructions

./: .pre-commit-config.yaml  Makefile  README.md  action.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/chatmodes/: create_instructions.chatmode.md
.github/instructions/languages/: INSTRUCTIONS-CDK.md  INSTRUCTIONS-PYTHON.md  INSTRUCTIONS-TERRAFORM.md  INSTRUCTIONS-TYPESCRIPT.md  cdk.instructions.md
.github/workflows/: ci.yml  pull_request.yml  release.yml  update_dev_container.yml
release_notes/: v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md
