
[project]
python = "^3.14"
name = "eps-copilot-instructions"

[tool.poetry]
name = "eps-copilot-instructions"
version = "0.0.1-alpha"
description = "EPS copilot instructions"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-copilot-instructions"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
